<resources>
    <string name="app_name">PhotoPass</string>
    <string name="share_app_name">香港迪士尼处处拍</string>
    <string name="app_update">数据更新中</string>
    <string name="user_login">用户登录</string>
    <string name="country">国家 / 地区</string>
    <string name="china">中国大陆</string>
    <string name="pwd">密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login">登录</string>
    <string name="sign">注册</string>
    <string name="other_sign">邮箱注册</string>
    <string name="otherLogin">电子邮箱账户登录</string>
    <string name="msgLogin">手机验证码快速登录</string>
    <string name="pwd_no_all_space">密码首或尾不能为空格</string>
    <string name="pwd_head_or_foot_space">密码首或尾不能为空格</string>
    <string name="modify_password_empty_hint">请输入密码</string>
    <string name="notify_password_hint">密码不能小于6位</string>
    <string name="connecting">正在加载中，请稍后&#8230;</string>
    <string name="input_mobile">手机号未输入</string>
    <string name="make_sure_mobile_detail">我们将发送验证码短信到这个号码:</string>
    <string name="modify_sms_empty_hint">请输入验证码</string>
    <string name="notify_sms_hint">验证码不能小于4位</string>
    <string name="email">电子邮箱</string>
    <string name="email_error">电子邮箱格式错误</string>
    <string name="nn">昵称</string>
    <string name="gender">性别</string>
    <string name="date_of_birth">生日</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="name_is_empty">请输入昵称</string>
    <string name="terms">补充条款及细则</string>
    <string name="policy">隐私政策</string>
    <string name="terms_of_use">使用条款</string>
    <string name="terms_and_policy"><a href="5">使用条款</a>\n以及<a href="2">补充条款及细则</a>\n以及<a href="1">隐私政策</a> </string>
    <string name="select_a_country">选择国家 / 地区</string>
    <string name="reset_pwd">重置密码</string>
    <string name="send_emal">发送验证邮件</string>
    <string name="back_login_page">返回登录页面</string>
    <string name="email_is_empty">请输入您的电子邮箱</string>
    <string name="email_sent">邮件已发送，请前往邮箱验证</string>
    <string name="reset_pwd_ok">确认</string>
    <string name="share">分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="share_failed">分享失败</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="share_failure_wechat">您的手机没有安装微信客户端，请先下载安装后再分享！</string>
    <string name="share_failure_weibo">您的手机没有安装微博客户端，请先下载安装后再分享！</string>
    <string name="share_failure_qzone">您的手机没有安装QQ客户端，请先下载安装后再分享！</string>
    <string name="share_failure_facebook">您的手机没有安装Facebook客户端，请先下载安装后再分享！</string>
    <string name="share_failure_twitter">您的手机没有安装Twitter客户端，请先下载安装后再分享！</string>
    <string name="share_failure_instagram">您的手机没有安装Instagram客户端，请先下载安装后再分享！</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="qq">QQ好友</string>
    <string name="share_text">我愿和您分享每一刻在上海迪士尼度假区的美妙体验！</string>
    <string name="share_not_open">请在应用上线后使用此功能！</string>
    <string name="exit">再按一次退出迪士尼处处拍</string>
    <string name="tab_story">故事</string>
    <string name="tab_discover">发现</string>
    <string name="tab_camera">相机</string>
    <string name="tab_shops">商店</string>
    <string name="tab_me">我的</string>
    <string name="please_relogin">请重新登录</string>
    <string name="story_tab_all">全部相册</string>
    <string name="story_tab_photopass">处处拍</string>
    <string name="story_tab_magic">本地相册</string>
    <string name="story_tab_bought">已购买</string>
    <string name="story_tab_favorite">收藏</string>
    <string name="story_other_en">Others</string>
    <string name="story_other_ch">其他</string>
    <string name="story_no_pp">请扫描您的迪士尼处处拍卡预览你的照片！</string>
    <string name="story_scan">扫一扫</string>
    <string name="no_photo_in_airpass">赶快去找迪士尼处处拍摄影师为您拍照吧！</string>
    <string name="no_photo_in_magiccam">收藏全部的已编辑图片</string>
    <string name="no_photo_in_bought">没有照片，赶快来购买吧！</string>
    <string name="no_photo_in_favourite">没有照片，赶快去收藏吧！</string>
    <string name="storypage_no_photo">您的迪士尼处处拍相册中还没有游玩的照片哦</string>
    <string name="storypage_no_pp">您的迪士尼处处拍照片将在此显示</string>
    <string name="story_no_photo">赶快去找迪士尼处处拍摄影师为您拍照吧！</string>
    <string name="no_network">当前网络繁忙，请稍后再试！</string>
    <string name="click_button_reload">您可以点击按钮重新加载</string>
    <string name="reload">刷新</string>
    <string name="nomore">没有更多照片！</string>
    <string name="failed_click_load">加载失败，请点击重新加载！</string>
    <string name="click_load_more">点击加载更多！</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="two_days_ago">2天前</string>
    <string name="three_days_ago">3天前</string>
    <string name="four_days_ago">4天前</string>
    <string name="five_days_ago">5天前</string>
    <string name="six_days_ago">6天前</string>
    <string name="video_location">My Disney Story</string>
    <string name="story_buy_ppp">购买迪士尼处处拍+</string>
    <string name="story_active_ppp">激活迪士尼处处拍+</string>
    <string name="story_scan_ppp">激活迪士尼处处拍+</string>
    <string name="story_scan_daily_ppp">激活您已购买的处处拍全日通</string>
    <string name="story_card">卡号：%1$s</string>
    <string name="story_blur_expire_time">(拍摄日起30天内请购买照片)</string>
    <string name="story_expire_time">(购买日起30天内请下载照片)</string>
    <string name="story_want_to_buy">我想购买</string>
    <string name="story_buy_dialog">购买当日已连结在1张迪士尼进餐处处拍卡内所有与迪士尼朋友进餐的数码照片</string>
    <string name="story_buy_dialog1">购买当日已连结在1张迪士尼处处拍卡内所有在园区拍摄的数码照片</string>
    <string name="auto">扫描</string>
    <string name="auto_scan">自动扫描</string>
    <string name="scan_qr_code">二维码</string>
    <string name="scan_ppp_code">迪士尼处处拍一卡通</string>
    <string name="scan_intro">请扫描您的迪士尼处处拍卡背的二维码</string>
    <string name="re_scan">重新扫描</string>
    <string name="textview_center_hint">请将迪士尼处处拍一卡通卡背面置于此区域，尝试对齐边缘</string>
    <string name="camera_closed">请先在设置中打开相机权限</string>
    <string name="camera_closed_jump_to_manual">因为没有打开相机权限，所以请手动输入</string>
    <string name="confirm_ppp_code_text_hint">请核对迪士尼处处拍一卡通密码\n\n如密码错误，请手动修改</string>
    <string name="scan_coupon_intro">请扫描以绑定你的优惠券</string>
    <string name="scan_coupon_intro2">请输入优惠券号码以绑定你的优惠券</string>
    <string name="manual">手动输入</string>
    <string name="active">激活</string>
    <string name="active_ppp">激活迪士尼\n处处拍一卡通</string>
    <string name="active_oneday_ppp">激活</string>
    <string name="ok">确认</string>
    <string name="manul_input_intro">请输入您的迪士尼处处拍卡背的16位编码</string>
    <string name="manul_input_intro2">请输入迪士尼处处拍+卡背的16位编码</string>
    <string name="manul_input_intro3">请输入您的迪士尼处处拍全日通卡背后的编码</string>
    <string name="nocontext">输入您的编码</string>
    <string name="input_code">手动输入卡号</string>
    <string name="wrong_length">请检查您的迪士尼处处拍卡片</string>
    <string name="input_content">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="discover_popularity">人气</string>
    <string name="discover_distance">距离</string>
    <string name="discover_selection">筛选</string>
    <string name="discover_collect">收藏</string>
    <string name="launching_camera">赶快去找您的摄影师为您拍照吧！</string>
    <string name="select">选择照片</string>
    <string name="selected">选择(0/9)</string>
    <string name="disney_video_go_to_select_photo">买照片</string>
    <string name="disney_video_edit_photo">开始制作(%1$d/%2$d)</string>
    <string name="disney_video_edit_photo_null">开始制作(0/3)</string>
    <string name="disney_video_bubble">只能选择%1$d张哦</string>
    <string name="hasselectedphoto">确定(%1$d/%2$d)</string>
    <string name="no_photo_update">您还没有可升级的照片！</string>
    <string name="photo_selected">此照片已经被选择</string>
    <string name="limit_photos">不能超过%1$d张照片</string>
    <string name="select_photos">请选择您的照片</string>
    <string name="magic_in_the_making">魔法动画照片还未上传</string>
    <string name="we_will_send_you_to">我们将立即发送给您！</string>
    <string name="my_disney_story_once_it_is_ready">当“我的迪士尼故事”制作完成后</string>
    <string name="disney_video_about_null_photo_note">如果您想开启“我的迪士尼故事”，请尽快购买迪士尼处处拍一卡通吧！</string>
    <string name="disney_video_introduces">Lorem ipsum dolor dolor sit amet,consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus acctmsan et viverra justo commodo. Proin sodales pulvinar tempor.</string>
    <string name="start">开始</string>
    <string name="story_unbound">解绑</string>
    <string name="story_myphotopass">我的处处拍</string>
    <string name="story_photo_count">(%1$d)</string>
    <string name="mypage_message">信息</string>
    <string name="mypage_coupons">抵用券</string>
    <string name="mypage_myprofile">个人信息</string>
    <string name="mypage_myorder">我的订单</string>
    <string name="mypage_pp">迪士尼处处拍</string>
    <string name="mypage_ppp">迪士尼处处拍一卡通</string>
    <string name="mypage_pp1">迪士尼\n处处拍</string>
    <string name="mypage_ppp1">迪士尼处处拍一卡通</string>
    <string name="mypage_daily_ppp1">卡包</string>
    <string name="mypage_help">帮助</string>
    <string name="mypage_setting">设置</string>
    <string name="mypage_about">关于</string>
    <string name="mypage_download">下载</string>
    <string name="mypage_opinions">联系我们</string>
    <string name="mypage_customer">处处拍客服</string>
    <string name="code_tips">请向迪士尼处处拍摄影师出示此二维码关联您的照片，即可轻松预览照片。</string>
    <string name="my_disney_story">我的迪士尼故事</string>
    <string name="neednotdownload_video">此视频已经存在</string>
    <string name="disney_video_selectphoto_model">选择模式</string>
    <string name="down">下载</string>
    <string name="edit">编辑</string>
    <string name="makegift">打印</string>
    <string name="touchtoclean">长按滑动即可预览照片</string>
    <string name="know">我知道了</string>
    <string name="like_and_buy">点击查看清晰图，喜欢购买吧！</string>
    <string name="reloadphoto">请重新加载此照片</string>
    <string name="neednotdownload">此照片已被保存在本地相册</string>
    <string name="local_photo_not_support_makegift">本地照片不允许打印</string>
    <string name="not_support_makegift">纪念照不允许打印</string>
    <string name="photo_index">%1$d/%2$d</string>
    <string name="photo_cannot_edit_content">对不起，您的此张带有模板标识的处处拍照片暂不支持编辑！</string>
    <string name="local_photo_cannot_edit_content">对不起，您的此张照片暂不支持编辑！</string>
    <string name="photo_cannot_edit_no">取消</string>
    <string name="photo_cannot_edit_yes">确认</string>
    <string name="gallery_buy_blur_photo">立即拥有此数码高清照片!</string>
    <string name="gallery_expire_time">（有效期至%1$s）</string>
    <string name="souvenir_not_exist">您还没纪念照哦！</string>
    <string name="souvenir_photo">纪念照</string>
    <string name="preview_blur_dialog_select_goods">选择商品</string>
    <string name="blur_intro">迪士尼处处拍一卡通可让您下载已关联在此处处拍卡内同一天的所有高清照片</string>
    <string name="up_ppp_money">我要购买迪士尼处处拍一卡通</string>
    <string name="use_ppp">使用已有的迪士尼处处拍一卡通</string>
    <string name="use_daily_ppp">使用已有的迪士尼处处拍+</string>
    <string name="buythisphoto">我要购买单张数码照片</string>
    <string name="cancel1">取消</string>
    <string name="use_ppp_intro">如果已绑定迪士尼处处拍+，可以在此选择后解锁并下载该处处拍卡内的全部照片</string>
    <string name="use_ppp_daily_intro">如果已绑定迪士尼处处拍+，可以在此选择后解锁并下载该处处拍卡内的全部照片</string>
    <string name="no_ppp_tips">您没有可用的迪士尼处处拍一卡通哦！</string>
    <string name="no_daily_ppp_tips">您没有可用的迪士尼处处拍全日通哦！</string>
    <string name="downloading">正在下载</string>
    <string name="downloading_percent">正在下载%1$d</string>
    <string name="finish_download">下载完成！</string>
    <string name="download_detail1">下载完成%1$d个文件！</string>
    <string name="download_detail2">下载完成%1$d个文件，下载失败%2$d个文件，请稍后再试！</string>
    <string name="load_photo_error">加载照片出错, 请重新加载此照片</string>
    <string name="save">保存</string>
    <string name="frames">相框</string>
    <string name="select_all">全选</string>
    <string name="about_tips">奇妙时光，完美定格</string>
    <string name="copyright">迪彩公司 版权所有</string>
    <string name="copyright1">Copyright © Disney</string>
    <string name="copyright2">All Rights Reserved.</string>
</resources>