<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:text="@string/magic_in_the_making"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:textSize="@dimen/text_middle_size"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/we_will_send_you_to"
        android:textSize="@dimen/text_small_size"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/my_disney_story_once_it_is_ready"
        android:textSize="@dimen/text_small_size"></TextView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_blue_shape_and_selector"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/ok"
        android:textColor="@drawable/textview_selector_blue_white"
        android:textSize="@dimen/text_middle_size" />
</LinearLayout>
