<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/pp_margin_16"
    android:background="@color/pp_light_gray_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/blur_detail"
        android:layout_marginBottom="@dimen/pp_margin_16"
        android:adjustViewBounds="true"
        android:src="@drawable/ppp_introduce1" />

    <TextView
        android:id="@+id/blur_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buy_ppp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/blur_intro"
        android:textColor="@color/pp_red"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/buy_ppp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/use_ppp"
        android:layout_marginBottom="@dimen/pp_margin_16"
        android:layout_marginTop="@dimen/pp_margin_16"
        android:background="@drawable/button_blue_shape_and_selector"
        android:gravity="center"
        android:padding="@dimen/pp_padding_10"
        android:text="@string/up_ppp_money"
        android:textColor="@drawable/textview_selector_blue_white"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/use_ppp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buynow"
        android:layout_marginBottom="@dimen/pp_margin_16"
        android:background="@drawable/button_blue_shape_and_selector"
        android:gravity="center"
        android:padding="@dimen/pp_padding_10"
        android:text="@string/use_ppp"
        android:textColor="@drawable/textview_selector_blue_white"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/buynow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel"
        android:layout_marginBottom="@dimen/pp_margin_16"
        android:background="@drawable/button_blue_shape_and_selector"
        android:gravity="center"
        android:padding="@dimen/pp_padding_10"
        android:text="@string/buythisphoto"
        android:textColor="@drawable/textview_selector_blue_white"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_sign_shape_and_selector"
        android:gravity="center"
        android:padding="@dimen/pp_padding_10"
        android:text="@string/cancel1"
        android:textColor="@color/pp_blue"
        android:textSize="@dimen/text_size_16" />

</RelativeLayout>