<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light" >

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue" >

        <ImageView
            android:id="@+id/back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:scaleType="centerInside"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/story_tab_bought"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:textColor="@color/gray2"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:text="@string/disney_video_edit_photo" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_centerHorizontal="true"
        android:text="@string/disney_video_about_null_photo_note" />

    <Button
        android:id="@+id/btn_goto_select"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:text="@string/disney_video_go_to_select_photo"
        android:visibility="visible" />

</RelativeLayout>