<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/space_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_btns_ll" />

    <LinearLayout
        android:id="@+id/bottom_btns_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/pp_light_gray_background"
        android:orientation="vertical"
        android:paddingLeft="@dimen/pp_dp_16"
        android:paddingRight="@dimen/pp_dp_16"
        android:paddingTop="@dimen/pp_dp_16">

        <TextView
            android:id="@+id/preview_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pp_dp_16"
            android:background="@drawable/button_blue_shape_and_selector"
            android:gravity="center"
            android:padding="@dimen/pp_dp_10"
            android:text="@string/edit"
            android:textColor="@drawable/textview_selector_gray_white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/preview_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pp_dp_16"
            android:background="@drawable/button_blue_shape_and_selector"
            android:gravity="center"
            android:padding="@dimen/pp_dp_10"
            android:text="@string/share"
            android:textColor="@drawable/textview_selector_gray_white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/preview_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pp_dp_16"
            android:background="@drawable/button_blue_shape_and_selector"
            android:gravity="center"
            android:padding="@dimen/pp_dp_10"
            android:text="@string/down"
            android:textColor="@drawable/textview_selector_gray_white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/preview_makegift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pp_dp_16"
            android:background="@drawable/button_blue_shape_and_selector"
            android:gravity="center"
            android:padding="@dimen/pp_dp_10"
            android:text="@string/makegift"
            android:textColor="@drawable/textview_selector_gray_white"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>


</RelativeLayout>