<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pp_light_gray_background"
    tools:context="com.pictureair.photopass.activity.AboutActivity">

    <include
        android:id="@+id/head"
        layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/scan_bottom" />

            <TextView
                android:id="@+id/versionCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginTop="@dimen/pp_margin_10_"
                android:layout_toRightOf="@+id/logo"
                android:text="1.0"
                android:textColor="@color/pp_dark_blue"
                android:textSize="@dimen/text_size_14" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/about_tips"
                android:textColor="@color/pp_dark_blue"
                android:textSize="@dimen/text_size_20" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"
                    android:textColor="@color/pp_gray"
                    android:textSize="@dimen/text_size_14"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pp_margin_5"
                    android:text="@string/copyright1"
                    android:textColor="@color/pp_gray"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pp_margin_5"
                    android:text="@string/copyright2"
                    android:textColor="@color/pp_gray"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:id="@+id/develop_version_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pp_margin_10"
                    android:textColor="@color/pp_gray"
                    android:visibility="invisible"
                    android:textSize="@dimen/text_size_14"/>

                <TextView
                    android:id="@+id/tv_terms_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/pp_margin_10"
                    android:textColor="@color/pp_blue"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/terms_and_policy"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>